third_party/move/move-compiler/tests/move_check/control_flow/for_loop_empty_novar.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/control_flow/for_loop_empty_novar.move:4:9
  │
4 │         for (_ in 0..10) {};
  │         ^^^^^^^^^^^^^^^^^^^ Invalid variable usage. Unbound variable '_'

